Update for third time free ranged

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Git and Github Course</title>
 </head>
 <body>
-  <h2>Welcome to Github Course</h2>
+  <h2>Welcome to Github Crush Course</h2>
 </body>
 </html>
